--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     }
 
     function WeAreValorant(){
-        document.getElementById("WeAreValorant").innerHTML = "Valorant"
+        document.getElementById("WeAreValorant").innerHTML = "vALORaNT"
     }
     function LoL(){
         let a6 = "a6 redd";
-        document.getElementById("LoL").innerHTML = "Valorant"
+        document.getElementById("LoL").innerHTML = "vALORaNT"
         document.getElementById("LoL").setAttribute("class", a6)
         document.getElementById("LoL").classList.add('a6')
         document.getElementById("LoL").classList.remove('a7')
@@ -100,25 +100,35 @@
         <a>PBE SIGNUP</a>
         <a class="playbutton">PLAY NOW</a>
     </div>
+    <video width="100%"  autoplay muted loop id="myVideo">
+        <source src="https://assets.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt714eaee50b90fc27/62cc7dcc6a8fb133b0ff7e55/VALORANT_ANNO22_SHATTERED_16x9_27s.mp4" type="video/mp4">
+    </video>
+
     <div class="a4">
         <div class="a5">A 5v5 character-based tactical shooter</div>
-        <div id="LoL" class="a6">VALORANT</div>
-        <button id="PlayFreeButton" onclick="LoL()" class="a7 red PlayFreeAnimation">PLAY FREE</button>
-        <button id="PlayCostButton"onclick="LaL()" class="a7 red PlayCostAnimation">PLAY COST</button>
-        <button id="FreeCostButton"onclick="LiL('blue')" class="a7 red FreeCostAnimation">FREE COST</button>
-        <button onclick="TurnOnAnimation()" class="a7 red">TURN ON</button>
-        <button onclick="TurnOffAnimation()" class="a7 red">TURN OFF</button>
+        <div id="LoL" class="a6">vALORaNT</div>
+        <button id="PlayFreeButton" onclick="LoL()" class="a7">
+            <div class="blackPlayFree"></div>
+            <div class="playfree">PLAY FREE</div>
+        </button>
+        </button>
+        <div class="triangle"></div>
     </div>
     <div class="news_section">
         <div class="a9"><b>GO TO THE NEW PAGE.</b></div>
+        <div class="dot1" style="left: 48% "></div>
+        <div class="dot1" style="left: 52% "></div>
         <div class="thelatest"><b>THE LATEST</b></div>
         <div class="news_container">
             <div class="news" >
-                <img src ='https://media.tenor.com/lTn_Gj0ljzYAAAAd/jett-valorant.gif?fbclid=IwAR3ks5lKIX4Yxv40L2CN-jaXKbOZfR2la_O8aS-JJjOGW16Bb5oK8jWWoyo'></img>
+                <img src ='https://media.tenor.com/lTn_Gj0ljzYAAAAd/jett-valorant.gif?fbclid=IwAR3ks5lKIX4Yxv40L2CN-jaXKbOZfR2la_O8aS-JJjOGW16Bb5oK8jWWoyo'>
+                    <div class="HoverNew"></div>
+                </img>
                 <div class="date">
                     <a>09/20/22 . </a>
                     <a>GAME UPDATES</a>
                 </div>
+                
                 <div class="title">
                     VALORANT PATCH NOTES 5.06
                 </div>
